--- a/css/main.css
+++ b/css/main.css
@@ -121,13 +121,6 @@ code{
 }
 */
 
-.content{
-  max-width: 1020px;
-  margin: auto;
-  justify-content: center;
-  align-items: center;
-}
-
 .container{
   margin-top: 120px;
 }
@@ -267,7 +260,7 @@ input:checked + .slider:before{
 /*------sidenav------*/
 
 .nav_ham{
-  font-size: 20px;
+  font-size: 1.3em;
   display: none;
   position: absolute;
   cursor: pointer;
@@ -321,22 +314,19 @@ input:checked + .slider:before{
 }
 
 /*------contents------*/
-.title{
-  width: -1;
-  position: absolute;
-  left: 50%;
+.title_container{
+  margin-top: 150px;
+  z-index: 200;
 }
 
 .main_title{
-  position: relative;
-  left: -50%;
-  top: 65px;
+  display: flex;
+  justify-content: center;
   text-align: center;
   font-size: 5.5em;
   font-weight: 700;
   letter-spacing: -2.2px;
   color: var(--grey900);
-  z-index: 200;
 }
 
 .main_sub1{
@@ -358,13 +348,16 @@ input:checked + .slider:before{
 }
 
 /*------contents_arrow------*/
+.arrow_container{
+  display: flex;
+  justify-content: center;
+  margin: -360px auto 20px auto;
+}
 
 .arrow{
   width: 80%;
-  display: block;
-  margin: 110px auto auto auto;
   opacity: 80%;
-  z-index: 100;
+  z-index: -500;
 }
 
 .path1{
@@ -681,36 +674,31 @@ color: var(--grey600);
 }
 
 /*-------section-------*/
-.p_section_container1{
-  max-width: 700px;
-  margin: 100px auto auto auto;
-}
-
-.p_section_container2{
-  position: absolute;
-  left: 50%;
-}
-
-.p_section_title, .p_section_title2{
-  position: relative;
-  top: 160px;
-  left: -50%;
-  font-size: 3.5em;
-  font-weight: 700;
-  letter-spacing: -.3px;
-  color: var(--grey800);
+.p_sectionTitle_container{
+  margin-top: -50px;
   z-index: 200;
 }
 
-.p_section_title2{
-  top: 110px;
+.p_sectionTitle{
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  font-size: 4em;
+  font-weight: 700;
+  letter-spacing: -.3px;
+  color: var(--grey800);
 }
 
 .p_section_interaction{
-  display: block;
-  margin: auto auto 110px auto;
+  display: flex;
+  justify-content: center;
+  margin: 80px auto 20px auto;
+}
+
+.interaction{
+  width: 80%;
   opacity: 90%;
-  z-index: 100;
+  z-index: -500;
 }
 
 .situation1.is-visible{
@@ -932,8 +920,24 @@ color: var(--grey600);
     padding: 2px 6px;
   }
 
+  .main_title{
+    font-size: 5.3em;
+  }
+
+  .main_sub1{
+    letter-spacing: -.3px;
+  }
+
+  .title_container{
+    margin-top: 120px;
+  }
+
+  .arrow_container{
+    margin-top: -380px;
+  }
+
   .arrow{
-    margin-top: 60px;
+    margin-top: 30px;
   }
   
   .main_title{
@@ -941,40 +945,58 @@ color: var(--grey600);
   }
 
   .main_sub1{
-    margin-top: -40px;
+    margin-top: -60px;
   }
 
   .work_img{
     height: 220px;
   }
 
-  /*------log.html------*/
+  .work_subtitle{
+    font-size: .95em;
+  }
+
   .work_date{
+    font-size: .95em;
     margin-top: 10px;
-    font-size: 1.05em;
   }
 
   /*------log.html------*/
   .log_p{
-    font-size: 1.1em;
-    line-height: 34px;
+    font-size: .95em;
+    line-height: 28px;
+  }
+
+  .log_date{
+    margin-top: 90px;
   }
 
   /*------about.html------*/
 
   .about_title, .about_p{
-    font-size: 1.1em;
+    font-size: .95em;
     letter-spacing: -.1px;
-    line-height: 34px;
+    line-height: 28px;
   }
 
   .about_en{
-    font-size: 1.15em;
+    font-size: .9em;
+    line-height: 26px;
   }
 
   .container{
     margin-top: 100px;
   }
+
+  /*------section------*/
+  .p_sectionTitle_container{
+    margin-top: -50px;
+  }
+
+  .p_sectionTitle{
+    font-size: 3.5em;
+  }
+
 
   /*------project------*/
   .banner{
@@ -987,37 +1009,34 @@ color: var(--grey600);
   }
   
   .banner_title{
-    font-size: 2.2em;
+    font-size: 1.8em;
   }
 
   .banner_subtitle{
-    font-size: 1.7em;
+    font-size: 1.3em;
   }
   
   .banner_date{
     font-size: 1.2em;
     float: unset;
-    margin-top: 40px;
+    margin-top: 80px;
   }
 
+  /*-------*/
+  
   .p_title_kr, .p_title_en{
-    font-size: 1.2em;
+    font-size: 1.1em;
   }
   
   .p_title_en{
-    font-size: 1.3em;
+    font-size: 1.2em;
   }
 
   .p_body{
-    font-size: 1.22em;
+    font-size: 1.1em;
     letter-spacing: -.2px;
     line-height: 35px;
   }  
-
-  .p_section_container1{
-    max-width: 85%;
-    margin-top: 80px;
-  }
 
   .p_container{
     margin-top: 40px;
@@ -1028,7 +1047,8 @@ color: var(--grey600);
   }
 
   .refer{
-    font-size: .95em;
+    font-size: .9em;
+    line-height: 32px;
   }
 
 /*------imgbox------*/
@@ -1140,19 +1160,6 @@ color: var(--grey600);
     font-size: 1em;
     float: unset;
     margin-top: 20px;
-  }
-
-  .p_section_container1{
-    margin-top: 100px;
-  }
-
-  .p_section_interaction{
-    width: 85%;
-  }
-
-  .p_section_title, .p_section_title2{
-    top: 135px;
-    font-size: 3em;
   }
 
 }
