--- a/css/main.css
+++ b/css/main.css
@@ -636,14 +636,14 @@ color: var(--grey600);
 }
 
 .p_box_3{
-  max-width: 700px;
+  width: 700px;
   height: 350px;
   margin: 120px auto auto auto;
   border-radius: 5px;
 }
 
 .p_box_4{
-  max-width: 700px;
+  width: 700px;
   height: 800px;
   margin: 120px auto auto auto;
   border-radius: 5px;
@@ -654,9 +654,6 @@ color: var(--grey600);
   height: 420px;
   margin: 120px auto auto auto;
 }
-
-
-
 
 
 .refer_container{
@@ -909,7 +906,7 @@ color: var(--grey600);
   }
 
   .p_box_4{
-    width: 85%;
+    width: 95%;
   }
 
 }
@@ -945,7 +942,7 @@ color: var(--grey600);
   }
 
   .main_sub1{
-    margin-top: -60px;
+    margin-top: -50px;
   }
 
   .work_img{
@@ -1019,7 +1016,7 @@ color: var(--grey600);
   .banner_date{
     font-size: 1.2em;
     float: unset;
-    margin-top: 80px;
+    margin-top: 15px;
   }
 
   /*-------*/
